--- a/programming/javascript.html
+++ b/programming/javascript.html
@@ -7,10 +7,11 @@
 
     <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
     <link rel="stylesheet" href="../CSS/leonardasf1.css">
-    <link rel="stylesheet" href="../CSS/highlight.css">
 
     <script src="../JS/jquery.js"></script>
     <script src="../JS/leoscript.js"></script>
+
+    <link rel="stylesheet" href="../CSS/highlight.css">
     <script src="../JS/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
@@ -282,7 +283,7 @@ document.attachEvent();  // for IE<=8
         resize       // изменение размера окна
         scroll  // над прокручиваемыми елементами
         select        // Выбор текста
-        submit        // Запрос на передачу данных формы
+        submit()       // Запрос на передачу данных формы
         transitioncancel
         transitionend
         unhandledrejection  // обработчик ошибок
