--- a/programming/index.html
+++ b/programming/index.html
@@ -54,6 +54,7 @@ h2 {margin-top: 0px}
         <a href="https://loftblog.ru/"><img src="https://loftblog.ru/favicon/apple-touch-icon.png" alt=""></a>
         <a href="https://devsday.ru/event/list"><img src="https://devsday.ru/favicon.png" alt=""></a>
         <a href="https://events.yandex.ru/"><img src="https://yastatic.net/s3/distribution/promo/react-yandex-favicon/vv0.1.1/favicons/ru/favicon-32x32.png" alt=""></a>
+        <a href="https://corp.mail.ru/ru/press/events/"><img src="https://limg.imgsmail.ru/re/i/apple-touch-icon-114x114-ee8777f5e3.png" alt=""></a>
         <a href="https://github.com"><img src="https://github.githubassets.com/favicon.ico" alt="github"></a>
         <a href="https://stackoverflow.com/tags"><img src="https://cdn.sstatic.net/Sites/stackoverflow/img/favicon.ico" alt="stackoverflow"></a>
         <a href="https://codesandbox.io"><img src="https://codesandbox.io/favicon.ico" alt="codesandbox"></a>
@@ -130,6 +131,7 @@ h2 {margin-top: 0px}
 <div>
     <h2>design</h2>
     <ul>
+        <li>Axure - проектирование прототипа сайта/приложения</li>
         <li><a href="https://www.gimp.org/">gimp.org</a></li>
         <a href="https://www.figma.com"><img src="https://static.figma.com/app/icon/1/favicon.png">
             figma.com</a> <span style="color: rgba(0,0,0,0);">1stepnoi</span><br>
@@ -149,10 +151,7 @@ h2 {margin-top: 0px}
 <div>
     <h2>Hosting / Domain</h2>
     <ul>
-    <li><svg version="1.1" xmlns="http://www.w3.org/2000/svg" height="25px" viewBox="0 0 22 35">
-        <polygon fill="#717272" points="8.2,26.3 -0.1,34.8 -0.1,18.1 8.2,9.6"/>
-        <polygon fill="#C25D28" points="17.8,16.7 9.4,25.2 9.4,8.4 17.8,0"/>
-    </svg> <a href="https://itvdn.com/ru/video/sitepublication">Публикация веб-сайта</a></li>
+    <li><a href="https://itvdn.com/ru/video/sitepublication">Публикация веб-сайта</a></li>
     <li><img src="https://htmlacademy.ru/favicon.svg"> <a href="https://htmlacademy.ru/blog/useful/programming/how-to-register-domain">how-to-register-domain</a></li>
     <li><img src="https://www.internic.net/touch/apple-touch-icon-57x57.png"> <a href="https://www.internic.net/alpha.html">InterNIC - Registrar List</a></li>
     <li><img src="https://www.moniker.com/assets/ico/favicon-16x16.png" alt=""> <a href="https://www.moniker.com/">moniker.com</a></li>
@@ -166,6 +165,7 @@ h2 {margin-top: 0px}
     </svg> <a href="https://azure.microsoft.com/ru-ru/">Microsoft Azure</a></li>
     <img src="https://www.namecheap.com/assets/img/nc-icon/namecheap-icon-72x72.png" height="16px"> <a href="https://www.namecheap.com">namecheap.com</a><br>
     <li><a href="https://gpdhost.com"><img src="https://gpdhost.com/images/favicon/favicon-32x32.png" height="16px"> gpdhost</a></li>
+    SSH
 </div>
 
 <div>
@@ -261,16 +261,9 @@ create .gitignore /tmp
     <li>unit-тесты , e2e-тесты</li>
     <li>CI/CD</li>
     <li>скрамы, канбаны, стендапы, парное программирование</li>
-    Инкапсуляция<br>
-    mootools <br>
-    <li>sonarJS</li>
-    <li>Next.js / Gatsby.js / Nest.js</li>
-    <li><a href="https://cdnjs.com">cdnjs.com</a></li>
     <li><a href="https://vk.com/doc41637949_513701117">code complete Стива Макконнела. 2010</a></li>
-    <li>Axure</li>
-    SSH
-    <li><a href="https://ru.wikipedia.org/wiki/Объектно-ориентированное_программирование">ООП</a></li>
-    <li><a href="https://electronjs.org/">electronjs</a></li>
+    <li><a href="https://ru.wikipedia.org/wiki/Объектно-ориентированное_программирование">ООП</a> Инкапсуляция, Наследование, Полиморфизм, Паттерны</li>
+    <li><img src="https://electronjs.org/images/favicon.ico" alt=""><a href="https://electronjs.org/">electronjs</a></li>
     <a href="https://htmlacademy.ru"><img src="https://htmlacademy.ru/favicon.svg"> htmlacademy.ru</a><span style="color: rgba(0,0,0,0);">e5744e2</span><br>
     <a href="https://www.sololearn.com/Course/HTML/"><img src="https://www.sololearn.com/Images/favicon-192x192.png"> sololearn.com</a> <span style="color: rgba(0,0,0,0);">ctepnoi</span> <br>
     <li><a href="https://youtu.be/RaiVatBqtGo">Качество кода: что это такое и зачем нужно знать? (Глеб Михеев)</a></li>
@@ -297,15 +290,18 @@ create .gitignore /tmp
 <div>
     <h2>инструменты</h2>
     <ul>
-        <li><a href="https://www.sublimetext.com"><img src="https://www.sublimetext.com/favicon.ico" alt="Sublime Text"> Sublime Text</a></li>
-        <li><a href="https://www.sublimemerge.com/"><img src="https://www.sublimemerge.com/favicon.ico" alt="sublimemerge"> Sublime Merge</a></li>
+<li><a href="https://www.sublimetext.com"><img src="https://www.sublimetext.com/favicon.ico" alt="Sublime Text"> Sublime Text</a></li>
+<li><a href="https://www.sublimemerge.com/"><img src="https://www.sublimemerge.com/favicon.ico" alt="sublimemerge"> Sublime Merge</a></li>
     sublimeText: .container>.header(>h1{Hello W})+.content>ul>li*5({item$}) <br>
-        <li><a href="https://www.jetbrains.com/phpstorm/documentation/phpstorm-video-tutorials.html"><img src="https://www.jetbrains.com/safari-pinned-tab.svg" alt="jetbrains"> jetbrains.com</a> <a href="https://jetbrains.ru/products/phpstorm/">jetbrains.ru</a></li>
+<li><a href="https://www.jetbrains.com/phpstorm/documentation/phpstorm-video-tutorials.html"><img src="https://www.jetbrains.com/safari-pinned-tab.svg" alt="jetbrains"> jetbrains.com</a> <a href="https://jetbrains.ru/products/phpstorm/">jetbrains.ru</a></li>
         <li><a href="https://codekitapp.com/">CodeKit</a></li>
         <li>Visual Studio Code</li>
-        <li><img src="https://git-scm.com/favicon.ico"> <a href="https://git-scm.com/">Git</a></li>
-        <li><img src="https://nodejs.org/static/images/favicons/favicon-16x16.png" alt=""> <a href="https://nodejs.org/en/">Node.js</a></li>
-        <li><a href="https://github.com/tehcookies/bundlers-comparison">Bundlers</a>: <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Webpack</a>, Parcel, Rollup</li>
+<li><img src="https://git-scm.com/favicon.ico"> <a href="https://git-scm.com/">Git</a></li>
+<li><img src="https://www.sonarsource.com/favicon.ico" alt=""> <a href="https://www.sonarsource.com/products/codeanalyzers/sonarjs.html">sonarJS</a> - анализатор кода</li>
+<li><img src="https://nodejs.org/static/images/favicons/favicon-16x16.png" alt=""> <a href="https://nodejs.org/en/">Node.js</a></li>
+<li><a href="https://github.com/tehcookies/bundlers-comparison">Bundlers</a>: <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Webpack</a>, Parcel, Rollup</li>
+<hr>js-frameworks: <a href="https://cdnjs.com">cdnjs.com</a>
+<li>Next.js / Gatsby.js / Nest.js <img src="https://mootools.net/images/favicon/mootools.png" alt=""> <a href="https://mootools.net/">mootools</a></li>
     </ul>
 </div>
 
