--- a/Surf/index.html
+++ b/Surf/index.html
@@ -27,26 +27,26 @@
   </div>
 </header>
 
-<div id="links">
+<!-- <div id="links">
 
-<a href="https://www.surfmakers-lanka.ru/blog-surf-school"><img src="https://www.surfmakers-lanka.ru/favicon.ico"> Блог школы серфинга на Шри-Ланке</a>
-<a href="http://surfstories.ru/"><img src="http://surfstories.ru/favicon.ico"> «Серфсторис-ру»</a>
-<a href="http://surfedukators.com/"><img src="http://surfedukators.com/favicon.ico"> Очень полезный английский сайт Surfedukators.com</a>
-<a href="https://www.theinertia.com/"><img src="https://www.theinertia.com/favicon.ico"> Сайт с новостями про серфинг Theinertia.com</a>
 </div>
 
 <nav>
 
-</nav>
+</nav> -->
 
 <article>
+<li><a href="https://www.surfmakers-lanka.ru/blog-surf-school"> Блог школы серфинга на Шри-Ланке</a></li>
+<li><a href="http://surfstories.ru/"><img src="http://surfstories.ru/favicon.ico" height="16px"> «Серфсторис-ру»</a></li>
+<li><a href="http://surfedukators.com/"> Очень полезный английский сайт Surfedukators.com</a></li>
+<li><a href="https://www.theinertia.com/"> Сайт с новостями про серфинг Theinertia.com</a></li>
+<br>
+<li><a href="https://www.youtu.be/dBmHlpliXfk">How to Surf Like a Pro in 25 Minutes</a></li>
+<li><a href="https://www.youtu.be/RsvjCH175hk">6 Advanced Surfing Lessons EVERYONE Should Learn</a></li>
+<li><a href="https://www.youtu.be/c6yOxWf3A6g">HOW TO SURF: 7 BEGINNER MISTAKES AND HOW TO FIX THEM</a></li>
+<li><a href="https://www.youtu.be/ei6ALmEFhyA">HOW TO SURF | 15 TIPS AND EXERCISES TO IMPROVE YOUR SURFING</a></li>
+<li><a href="https://www.youtu.be/esV6ypDDoVA">BIGGEST WAVES EVER SURFED IN HISTORY | LAS OLAS MÁS GRANDES JAMÁS SURFEADAS</a></li>
 
-<iframe width="200" src="https://www.youtube.com/embed/dBmHlpliXfk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<iframe width="200" src="https://www.youtube.com/embed/RsvjCH175hk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<iframe width="200" src="https://www.youtube.com/embed/c6yOxWf3A6g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<iframe width="200" src="https://www.youtube.com/embed/ei6ALmEFhyA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/esV6ypDDoVA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <hr>
 <p>Серфер — это человек, который может поймать правильную волну и прокатиться на ней, используя свою ловкость и специальную экипировку. Некоторые серферы специально переезжают к океану, чтобы совмещать серфинг с работой. Кто-то из серферов начинают работать в этой же сфере: держат прокаты оборудования, создают школы и лагеря.</p>
 <p>У серфера должно быть свое оборудование или понимание, какую доску нужно брать в прокате. Он знает, как выбрать место и время для катания. Серфер умеет предсказать поведение волны и оказаться в нужном месте, чтобы ее поймать.</p>
