--- a/programming/index.html
+++ b/programming/index.html
@@ -9,10 +9,7 @@
   <link rel="stylesheet" href="../CSS/leonardasf1.css">
 
     <style>
-li { 
-  list-style-type: none;
-  margin-bottom: 5px
-}
+
 .primery {
     display: flex;
     flex-wrap: wrap;
@@ -76,7 +73,6 @@ h2 {margin-top: 0px}
             <img src="https://getbootstrap.com/docs/4.3/assets/img/favicons/apple-touch-icon.png">
             <span style="color: #563d7c">Bootstrap</span>
         </a>
-        <br><br>
         <a href="javascript.html">
             <img src="../icons/javascript.svg">
             <span style="color: #f7df1e">JavaScript</span>
@@ -138,7 +134,7 @@ h2 {margin-top: 0px}
         <li>AdobeXD</li>
         <a href="https://www.awwwards.com/"><img src="https://www.awwwards.com/favicon.ico">
             awwwards.com</a><br>
-        <a href="http://www.cssdsgn.ru"><img src="https://www.cssdsgn.com/icons/favicon-32x32.png">
+        <a href="http://www.cssdsgn.com"><img src="https://www.cssdsgn.com/icons/favicon-32x32.png">
             cssdsgn.com</a><br>
         <a href="http://www.unsplash.com"><img src="https://unsplash.com/favicon-16x16.png">
             unsplash.com</a><br>
