--- a/programming/javascript.html
+++ b/programming/javascript.html
@@ -19,11 +19,6 @@
 
 h1 {text-align: center;}
 
-article {
-    background: #424040;
-    color: white
-}
-
 .prelogo {color: yellow}
 pre a {color: white;}
 </style>
@@ -52,8 +47,7 @@ pre a {color: white;}
     <a href="https://webref.ru/tech/javascript">WebRef</a>
 </div>
 
-<article class="itvdn">
-	<a href="https://itvdn.com/ru/catalog/specialities/js"><img src="https://itvdn.com/Content/img/header/logo.svg" height="50px" alt="ITVDN"></a>
+<article class="flex">
 	<div>
 		<a href="https://itvdn.com/ru/video/javascript-essential">JavaScript Essential</a>
 		<ul>
@@ -195,7 +189,7 @@ Methods
     postMessage()
     terminate()
     </div></details>
-<details><summary>Сookie / Storage <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Storage_API"></a></summary><div>
+<details><summary>Cookie / Storage <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Storage_API"></a></summary><div>
     window.sessionStorage
     window.localStorage
         .setItem("key1", "value1")
@@ -1176,7 +1170,8 @@ Array.prototype[@@iterator]()
         }
         else {
             coffeeSize();
-        }</div></details>
+        }</div></details></div>
+        <div class="flex">
     <div>
 
     if (сравнение) {}  если
